# src/routes/api.php
@@ -19,6 +19,7 @@ use App\Http\Controllers\Api\LevelController;
 use App\Http\Controllers\Api\JobController;
 use App\Http\Controllers\Api\PlanController;
 use App\Http\Controllers\Api\PagesController;
+use App\Http\Controllers\Api\GalleryController;
 
 
 Route::prefix('v1')->middleware('api')->group(function () {
@@ -32,6 +33,7 @@ Route::prefix('v1')->middleware('api')->group(function () {
     Route::get('/opening-jobs', [JobController::class, 'indexJobs']);
     Route::get('/plans', [PlanController::class, 'indexPlans']);
     Route::get('/page/{slug?}', [PagesController::class, 'getPageBySlug']);
+    Route::get('/gallery', [GalleryController::class, 'gallaryList']);
 
     Route::prefix('shop')->group(function () {
         Route::get('/categories', [ShopCategoryController::class, 'index'])->name('api-shop-category-list');
