# src/storage/api-docs/api-docs.json
@@ -6,7 +6,7 @@
         "contact": {
             "email": "balumba.ru@gmail.com"
         },
-        "version": "1.19.0"
+        "version": "1.20.0"
     },
     "paths": {
         "/contacts": {
@@ -23,6 +23,37 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/ContactsResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/gallery": {
+            "get": {
+                "tags": [
+                    "other"
+                ],
+                "summary": "Получение галлереи ТЦ",
+                "operationId": "gallaryList",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Номер запрашиваемой страницы",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успешный ответ",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GalleryResponse"
                                 }
                             }
                         }
@@ -1674,6 +1705,37 @@
                             }
                         },
                         "type": "object"
+                    }
+                },
+                "type": "object"
+            },
+            "GalleryResponse": {
+                "properties": {
+                    "type": {
+                        "type": "string",
+                        "default": "success"
+                    },
+                    "data": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/GalleryItem"
+                        }
+                    }
+                },
+                "type": "object"
+            },
+            "GalleryItem": {
+                "properties": {
+                    "type": {
+                        "type": "string",
+                        "default": "video | pic"
+                    },
+                    "path": {
+                        "type": "string",
+                        "default": "https://resource.ru/media..."
+                    },
+                    "alt": {
+                        "type": "string"
                     }
                 },
                 "type": "object"
